[package]
name = "tokio-tar"
version = "0.2.0"
authors = [
    "Alex Crichton <alex@alexcrichton.com>",
    "dignifiedquire <me@dignifiequire.com>",
    "Artem Vorotnikov <artem@vorotnikov.me>",
    "Aiden McClelland <me@drbonez.dev>",
]
homepage = "https://github.com/vorot93/tokio-tar"
repository = "https://github.com/vorot93/tokio-tar"
documentation = "https://docs.rs/tokio-tar"
license = "MIT/Apache-2.0"
keywords = ["tar", "tarfile", "encoding"]
readme = "README.md"
edition = "2018"
exclude = ["tests/archives/*"]

description = """
A Rust implementation of an async TAR file reader and writer. This library does not
currently handle compression, but it is abstract over all I/O readers and
writers. Additionally, great lengths are taken to ensure that the entire
contents are never required to be entirely resident in memory all at once.
"""

[dependencies]
filetime = "0.2.13"
futures-core = "0.3"
tokio = { version = "1.0.1", features = ["fs", "io-util", "rt"] }
tokio-stream = "0.1.1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1.0.1", features = ["full"] }

[target."cfg(unix)".dependencies]
xattr = { version = "0.2", optional = true }
libc = "0.2"

[target.'cfg(target_os = "redox")'.dependencies]
redox_syscall = "0.2"

[features]
default = ["xattr"]
