[package]
name = "unstoppableswap-gui-rs"
version = "0.0.0"
authors = [ "you" ]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

description = "A Tauri App"

[lib]
name = "unstoppableswap_gui_rs_lib"
crate-type = [ "lib", "cdylib", "staticlib" ]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [ ] }

[dependencies]
anyhow = "1"
once_cell = "1"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
swap = { path = "../swap" }
tauri = { version = "2.0.0-beta", features = [ ] }
tauri-plugin-shell = "2.0.0-beta"
